@@ -37,8 +37,6 @@ class Net::SSLeay::SSL_CTX : pointer {
   use StringList;
   
   # Class Variables
-  our $TLSEXT_TICKET_KEY_CBS : Hash of Net::SSLeay::Callback::TlsextTicketKey;
-  
   our $NEW_SESSION_CBS : Hash of Net::SSLeay::Callback::NewSession;
   
   our $REMOVE_SESSION_CBS : Hash of Net::SSLeay::Callback::RemoveSession;
@@ -48,8 +46,6 @@ class Net::SSLeay::SSL_CTX : pointer {
   our $MUTEX : Sync::Mutex;
   
   INIT {
-    $TLSEXT_TICKET_KEY_CBS = Hash->new;
-    
     $NEW_SESSION_CBS = Hash->new;
     
     $REMOVE_SESSION_CBS = Hash->new;
@@ -133,58 +129,19 @@ class Net::SSLeay::SSL_CTX : pointer {
   
   native method set_verify : void ($mode : int, $verify_callback : Net::SSLeay::Callback::Verify = undef);
   
-  native method set_alpn_select_cb : void ($cb : Net::SSLeay::Callback::AlpnSelect, $arg : object);
-  
   native method set_default_passwd_cb : void ($cb : Net::SSLeay::Callback::PemPassword, $arg : object = undef);
+  
+  native method set_alpn_select_cb : void ($cb : Net::SSLeay::Callback::AlpnSelect, $arg : object);
   
   native method set_alpn_select_cb_with_protocols : void ($protocols : string[]);
   
   native method set_tlsext_servername_callback : long ($cb : Net::SSLeay::Callback::TlsextServername, $arg : object = undef);
-  
-  native method set_tlsext_ticket_key_cb : void ($cb : Net::SSLeay::Callback::TlsextTicketKey);
   
   native method sess_set_new_cb : void ($cb : Net::SSLeay::Callback::NewSession);
   
   native method sess_set_remove_cb : void ($cb : Net::SSLeay::Callback::NewSession);
   
   native method DESTROY : void ();
-  
-  private method GET_TLSEXT_TICKET_KEY_CB : Net::SSLeay::Callback::TlsextTicketKey ($key : string) {
-    
-    Fn->defer(method : void () {
-      $MUTEX->reader_unlock;
-    });
-    
-    $MUTEX->reader_lock;
-    
-    my $psk_server_cb = (Net::SSLeay::Callback::TlsextTicketKey)$TLSEXT_TICKET_KEY_CBS->get($key);
-    
-    return $psk_server_cb;
-  }
-  
-  private method SET_TLSEXT_TICKET_KEY_CB : void ($key : string, $psk_server_cb : Net::SSLeay::Callback::TlsextTicketKey) {
-    
-    Fn->defer(method : void () {
-      $MUTEX->unlock;
-    });
-    
-    $MUTEX->lock;
-    
-    $TLSEXT_TICKET_KEY_CBS->set($key, $psk_server_cb);
-  }
-  
-  private method DELETE_TLSEXT_TICKET_KEY_CB : Net::SSLeay::Callback::TlsextTicketKey ($key : string) {
-    
-    Fn->defer(method : void () {
-      $MUTEX->unlock;
-    });
-    
-    $MUTEX->lock;
-    
-    my $deleted = (Net::SSLeay::Callback::TlsextTicketKey)$TLSEXT_TICKET_KEY_CBS->delete($key);
-    
-    return $deleted;
-  }
   
   private method GET_NEW_SESSION_CB : Net::SSLeay::Callback::NewSession ($key : string) {
     
